--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://danforder.github.io/npm-test",
   "private": true,
   "scripts": {
     "build": "webpack",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "canvas-confetti": "^1.5.1",
+    "colorthief": "^2.3.2",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21"
   },
