--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "test",
   "version": "1.0.0",
-  "description": "",
+  "description": "example project that uses npm packages",
   "homepage": "https://danforder.github.io/npm-test",
   "private": true,
   "scripts": {
-    "build": "webpack",
+    "start": "webpack",
+    "live-server": "live-server dist",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
@@ -15,9 +16,15 @@
     "canvas-confetti": "^1.5.1",
     "colorthief": "^2.3.2",
     "gh-pages": "^3.2.3",
+    "live-server": "^1.2.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
