--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "https://danforder.github.io/npm-test",
   "private": true,
   "scripts": {
-    "start": "webpack",
-    "live-server": "live-server dist",
-    "deploy": "gh-pages -d dist"
+    "build": "webpack",
+    "start": "live-server build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
