--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://danforder.github.io/js-boilerplate",
   "private": true,
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config ./webpack.config.js",
+    "build:dev": "webpack --config ./webpack.config.dev.js",
     "start": "live-server build",
     "deploy": "gh-pages -d build"
   },
@@ -13,8 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas-confetti": "^1.5.1",
-    "colorthief": "^2.3.2",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21"
   },
